added inputs for suggestions and bound them to state

--- a/css/import-files.css
+++ b/css/import-files.css
@@ -7,6 +7,7 @@
 /* modules */ 
 @import url('modules/main-panel.css');
 @import url('modules/home-panel.css');
+@import url('modules/contact-panel.css');
 
 input,
 select,
