--- a/css/modules/main-panel.css
+++ b/css/modules/main-panel.css
@@ -11,13 +11,19 @@
 	right: 0px;   
 }
 .main-panel header {
-	position: absolute; 
+	position: absolute;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
 	height: 80px; 
 	width: 100%; 
 	background: #FFF; 
 	padding-top: 1px; 
 	box-shadow: 0px 2px 1px rgba(0,0,0,.05); 
-	z-index: 5; 
+	z-index: 5;
+}
+.main-panel header .header-modal.bttn {
+	margin-right: 50px;
 }
 .main-panel header h1 {
 	height: 80px;
